--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8089
 spring.thymeleaf.cache=false
 spring.datasource.name=newbee-mall-datasource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/applemall2?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/apple_mall?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=zxcvbnm*
+spring.datasource.password=admin
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.auto-commit=true
